{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 560,
  "lineage": "06aa703f-6872-9922-d274-2578ff7eec59",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jumphost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a72af05d27b49ccb",
            "arn": "arn:aws:ec2:ap-southeast-1:778390640300:instance/i-05b5d455a76f10e0d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b5d455a76f10e0d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hal-ap-se-1a-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e0a7e9cf08c08bc7",
            "private_dns": "ip-10-0-2-124.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.124",
            "public_ip": "54.254.160.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0acd3eacd44c93307",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f35d3402c6c417b6",
            "tags": {
              "Name": "jumphost"
            },
            "tags_all": {
              "Name": "jumphost"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00d4595d6d33f8057"
            ]
          },
          "dependencies": [
            "aws_security_group.jumphost_sg",
            "aws_subnet.private_a",
            "aws_vpc.dev_ap-se-1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:778390640300:internet-gateway/igw-0d819b055d7d00436",
            "id": "igw-0d819b055d7d00436",
            "owner_id": "778390640300",
            "tags": {
              "name": "dev-igw"
            },
            "tags_all": {
              "name": "dev-igw"
            },
            "vpc_id": "vpc-0d285049c48eccf59"
          },
          "dependencies": [
            "aws_vpc.dev_ap-se-1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dev_elbv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:778390640300:loadbalancer/app/dev-elbv2/dce716168bbfe509",
            "arn_suffix": "app/dev-elbv2/dce716168bbfe509",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-elbv2-2019680232.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:778390640300:loadbalancer/app/dev-elbv2/dce716168bbfe509",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-elbv2",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06a6bd31d2840229a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-052d771c9c13a79bf"
              },
              {
                "subnet_id": "subnet-0f35d3402c6c417b6"
              }
            ],
            "subnets": [
              "subnet-052d771c9c13a79bf",
              "subnet-0f35d3402c6c417b6"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0d285049c48eccf59",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.dev_elb_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.dev_ap-se-1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dev_elbv2_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:778390640300:listener/app/dev-elbv2/dce716168bbfe509/4569cd1740140154",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:778390640300:targetgroup/dwtg20230430120756696900000001/8170d0295136c792",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:778390640300:listener/app/dev-elbv2/dce716168bbfe509/4569cd1740140154",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:778390640300:loadbalancer/app/dev-elbv2/dce716168bbfe509",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.dev_elbv2",
            "aws_lb_target_group.dev_web_target_group",
            "aws_security_group.dev_elb_sg",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.dev_ap-se-1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dev_web_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:778390640300:targetgroup/dwtg20230430120756696900000001/8170d0295136c792",
            "arn_suffix": "targetgroup/dwtg20230430120756696900000001/8170d0295136c792",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:778390640300:targetgroup/dwtg20230430120756696900000001/8170d0295136c792",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dwtg20230430120756696900000001",
            "name_prefix": "dwtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d285049c48eccf59"
          },
          "dependencies": [
            "aws_vpc.dev_ap-se-1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:778390640300:route-table/rtb-0609e7ec2bea82811",
            "id": "rtb-0609e7ec2bea82811",
            "owner_id": "778390640300",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d819b055d7d00436",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-a"
            },
            "tags_all": {
              "Name": "private-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d285049c48eccf59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_vpc.dev_ap-se-1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c29dd5811a6bbdc5",
            "route_table_id": "rtb-0609e7ec2bea82811",
            "subnet_id": "subnet-0f35d3402c6c417b6"
          },
          "dependencies": [
            "aws_internet_gateway.dev_igw",
            "aws_route_table.private_a",
            "aws_subnet.private_a",
            "aws_vpc.dev_ap-se-1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:778390640300:security-group/sg-06a6bd31d2840229a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a6bd31d2840229a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-elb-sg",
            "name_prefix": "",
            "owner_id": "778390640300",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d285049c48eccf59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_ap-se-1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:778390640300:security-group/sg-00ac410151b7d8daa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ac410151b7d8daa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-web-sg",
            "name_prefix": "",
            "owner_id": "778390640300",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d285049c48eccf59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_ap-se-1_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jumphost_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:778390640300:security-group/sg-00d4595d6d33f8057",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00d4595d6d33f8057",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jh20230430120756714300000002",
            "name_prefix": "jh",
            "owner_id": "778390640300",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d285049c48eccf59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_ap-se-1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:778390640300:subnet/subnet-0f35d3402c6c417b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f35d3402c6c417b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778390640300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private-subnet-a"
            },
            "tags_all": {
              "name": "private-subnet-a"
            },
            "vpc_id": "vpc-0d285049c48eccf59"
          },
          "dependencies": [
            "aws_vpc.dev_ap-se-1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:778390640300:subnet/subnet-052d771c9c13a79bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052d771c9c13a79bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778390640300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "private-subnet-b"
            },
            "tags_all": {
              "name": "private-subnet-b"
            },
            "vpc_id": "vpc-0d285049c48eccf59"
          },
          "dependencies": [
            "aws_vpc.dev_ap-se-1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:778390640300:subnet/subnet-0eec8784fd8963a92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eec8784fd8963a92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "778390640300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public-subnet"
            },
            "tags_all": {
              "name": "public-subnet"
            },
            "vpc_id": "vpc-0d285049c48eccf59"
          },
          "dependencies": [
            "aws_vpc.dev_ap-se-1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_ap-se-1_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:778390640300:vpc/vpc-0d285049c48eccf59",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04e51fcc9324dcc1c",
            "default_route_table_id": "rtb-0eaef34b859993907",
            "default_security_group_id": "sg-01e40e34ca308ed66",
            "dhcp_options_id": "dopt-2b68414c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d285049c48eccf59",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eaef34b859993907",
            "owner_id": "778390640300",
            "tags": {
              "name": "dev-ap-se-1"
            },
            "tags_all": {
              "name": "dev-ap-se-1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}